[package]
name = "lambda_helpers_metrics"
license = "MIT"
version = "0.1.0-alpha"
edition = "2021"
description = "Helper for EMF metrics in AWS Lambda Function"
repository = "https://github.com/szymon-szym/lambda_helpers_metrics"

[dependencies]
chrono = "0.4.38"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
